--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Jonathan's Site
-description: How did you get here O_o ?
+title: Drax Ware
+description: Drax Ware LLC
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
